# miditocv

./: .dir-locals.el  .gitignore  1.txt  CMakeLists.txt  Makefile  README.md  main.c  requirements.txt  testing.lua  tusb_config.h
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml
dev/: calibrate.py  miditest.py  miditocv.scd  postmerge.sh  requirements.txt  send.py  yoctocore.scd
dev/web/: index.html
dev/yoctocore-fs/: go.mod  go.sum
dev/yoctocore-fs/luaformatter/: lua.js  luaformat.go  luaformat_test.go
dev/yoctocore-fs/midicom/: midicom.go  midicom_test.go
docs/: PANIC_FLOW.md  PANIC_HANDLING.md
docs2/: docusaurus.config.ts  package-lock.json  package.json
docs2/docs/integrations/: supercollider.md
docs2/docs/modes/: _category_.json  note-mode.md
docs2/docs/tutorial-basics/: code.mdx  manual.md
docs2/src/components/: LuaCodeBox.tsx
docs2/src/css/: custom.css
docs2/src/pages/: index.tsx
examples/: gate_example.lua
hardware/case/: miditocv_bottom.stl  miditocv_buttons.stl  miditocv_top.stl
lib/: WS2812.h  adsr.h  circular_buffer.h  clockout.h  clockpool.h  dac.h  files.h  flash.c  flash.h  flashmem.h  hash.h  knob_change.h  lfo.h  libmidi.c  libmidi.h  lua_globals.h  luavm.h  mcp3208.h  mcp4725.h  mcp4728.h  memusage.h  midi_comm.h  midicallback.h  miditocv.h  midiuart.h  noise.h  scales.h  scene.h  script.lua  sdcard.h  simpletimer.h  slew.h  spectra.h  spiral.h  taptempo.h  usb_descriptors.c  utils.h  yoctocore.h
lib/sdio/sd_driver/: sd_card.c
lib/tests/adsr/: Makefile  main.c  plot.py
lib/tests/circularbuffer/: Makefile  main.c
lib/tests/hash/: Makefile  main.c
lib/tests/lfo/: Makefile  main.c  plot.py
lib/tests/lua/: Makefile  README.md  main.c  script.lua  sequins.lua  test_basic_simple.c  test_gate  test_gate.c  test_load_failure  test_load_failure.c  test_panic.c  test_panic_handler  test_panic_handler.c  test_panic_simple.c  test_real_panic  test_real_panic.c
lib/tests/scales/: main.c  scales.lua
lib/tests/simpletimer/: Makefile  main.c  plot.py
lib/tests/slew/: Makefile  main.c
lib/tests/spiral/: Makefile  main.c  run.py
lib/tests/taptempo/: main.c
lib/tests/utils/: main.c
lib/tests/waveform/: main.c
lib/tests/wavheader/: Makefile  main.c
web/: .parcelrc  docs.html  index.html  index.js  package-lock.json  package.json
web/static/: app.js  codemirror.css  docs.css  globals-adj.css  globals.css  globals.lua  index.3d214d75.js  index.3d214d75.js.map  index.f2c0ec77.js  index.f2c0ec77.js.map  lua-formatter.js  luamin.bundle.js  luamin.js  luamin.min.js  midistuff.js  style.css  tiny-brutalism.css
